--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,12 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.6.6</version>
 		</dependency>
+		
+		<!-- HTTP to string -->
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.3.5</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 	</dependencies>
 
